--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,4 @@
 <span onClick="backLinker(this)" class="back-link">&lt; back</span>
 <h1>{{ page.title }}</h1>
-<p>{{ page.date | date_to_string }}</p>
-
+<p>{{ page.date | date_to_string }}: {{page.desc}}</p>
 {{ content }}
