adds some rumpleblump etc

--- a/_layouts/thirds.html
+++ b/_layouts/thirds.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title></title>
+	<title>Some stuff that's recent and other stuff that's not.</title>
 	<script src="/assets/js/jquery-3.3.1.min.js"></script>
     <script src="/assets/js/thirds.js"></script>
     <!-- <script src="/search.js"></script> -->
