--- a/_layouts/thirds.html
+++ b/_layouts/thirds.html
@@ -7,6 +7,7 @@
     <script src="/assets/js/thirds.js"></script>
     <!-- <script src="/search.js"></script> -->
 	<link rel="stylesheet" href="/assets/css/styles.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 	<script>
 	var content = {
 		articleLeft: [],
@@ -24,7 +25,7 @@
 					{% for post in site.posts %}
 						{% if post.contentType == 'mymusic' %}
 							<li>
-							<h2><span onclick="linker(this)" class="link" data-link="{{ post.url }}">{{ post.title }}</span></h2>
+							<h2><a href="https://johnnystomp.bandcamp.com/releases">{{ post.title }}</a></h2>
 							<p>{{ post.excerpt }}</p>
 							</li>
 						{% endif %}
