--- a/_layouts/thirds.html
+++ b/_layouts/thirds.html
@@ -59,6 +59,7 @@
 						{% if post.contentType == page.categories[1] %}
 							<li>
 							<h2><span onclick="linker(this)" class="link" data-link="{{ post.url }}">{{ post.title }}</span></h2>
+							<em>{{ post.desc }}</em>
 							<p>{{ post.excerpt }}</p>
 							</li>
 						{% endif %}
